--- a/index.html
+++ b/index.html
@@ -1,33 +1,46 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+
+        <meta property="og:url"            content="https://github.com/dayn-01/mango-recom" />
+        <meta property="og:title"          content="Mangoesssss" />
+        <meta property="og:description"    content="Mango recommendations" />
+        <meta property="og:image"          content="/assets/img/pngaaa.com-1777296.png" />
+        <!--this is a template uwu -->
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Mangoesssss</title>
+        <link rel="icon" type="image/x-icon" href="assets/img/pngaaa.com-1777296.png">
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+        <!-- Favicon-->
+        
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+            <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <div class="card text-center">
-        <div class="card-header">
-            ADO X MIKU CUPSLEEVE EVENT
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Project Spark: A Timeless Blossom</h5>
-            <p class="card-text">Guess the Character - Silhouette Edition !</p>
-            <a href="/Activity/GuessTheCharacter/Stage1.html" class="btn btn-outline-primary">START</a>
-        </div>
-    </div>
+    </head>
+    <body id="page-top">
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script type="text/json" src="assets\json\question-temp.json"></script>
-    <script src="js/scripts.js"></script>
-</body>
+      <div class="card text-center">
+        <div class="card-body">
+          <div id ="img-tarvet-div"></div>
+            <a href="#" class="btn btn-outline-primary">SHOW</a>
+        </div>
+      </div>
+    
+      <!-- Bootstrap core JS-->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+      <!-- Core theme JS-->
+      <script type="text/json" src="/assets/json/question-temp.json"></script>
+      <script src="/js/gtc/script_Stage1.js"></script>
+    </body>
 </html>
