--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 <html lang="en">
     <head>
 
-        <meta property="og:url"            content="https://github.com/dayn-01/mango-recom" />
-        <meta property="og:title"          content="Mangoesssss" />
-        <meta property="og:description"    content="Mango recommendations" />
-        <meta property="og:image"          content="/assets/img/pngaaa.com-1777296.png" />
+        <meta property="og:url"            content="https://github.com/dayn-01/ado/ph" />
+        <meta property="og:title"          content="AdoPH" />
         <!--this is a template uwu -->
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -33,9 +31,11 @@
       <div class="card text-center">
         <div class="card-body">
           <div id ="img-tarvet-div"></div>
-            <a href="#" class="btn btn-outline-primary">SHOW</a>
+          <div id ="button-target"></div>
         </div>
       </div>
+
+      <div id ="modal-box"></div>
     
       <!-- Bootstrap core JS-->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
