--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Mangoesssss</title>
+        <title>AdoPH Guess the character</title>
         <link rel="icon" type="image/x-icon" href="assets/img/pngaaa.com-1777296.png">
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <!-- Favicon-->
