add stage count and stuff. made stage 3 to show uta or migu

--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
     </head>
     <body id="page-top">
 
-      <div style="padding-top: 4%;" class="text-center">
+      <div style="padding-top: 1%;" class="text-center">
         <div id ="img-tarvet-div"></div>
-        
+        <div id ="stage-count"></div>
       </div>
 
       <div id ="modal-box"></div>
+  
+  
     
       <div class="text-center">
         <div id ="button-target" class="d-grid gap-2">
